<?xml version="1.0"?>
<package format="3">
  <name>myrobot_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 integration layer for MyRobot core modules.</description>
  <maintainer email="dev@example.com">MyRobot Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
